fix the problem that the service fails submitting cluster job (probably caused by the name change of the cluster)